Added form action and replaced video with iframe

--- a/index.html
+++ b/index.html
@@ -18,18 +18,20 @@
                 <h2 id="app-title">Kuwa Social!</h2>
             </div>
             
-            <nav id="nav-bar">
-                <a class="nav-link" href="#features">Features</a>
-                <a class="nav-link" href="#how-it-works">How It Works</a>
-                <a class="nav-link" href="#pricing">Pricing</a>
-            </nav>
+            <div id="nav">
+                <nav id="nav-bar">
+                    <a class="nav-link" href="#features">Features</a>
+                    <a class="nav-link" href="#how-it-works">How It Works</a>
+                    <a class="nav-link" href="#pricing">Pricing</a>
+                </nav>
+            </div>
         </header>
 
         <section id="hero">
             <!--Subtitle-->
             <h2>Set regular times in your schedule for you to interact with friends and family saved in your phone's contact list.</h2>
-            <form id="form" action="">
-                <input id="email" name="email" type="email" placeholder="Enter your email address">
+            <form id="form" action="https://www.freecodecamp.com/email-submit">
+                <input id="email" name="email" type="email" placeholder="Enter your email address" required>
                 <input id="submit" type="submit" value="Get the App">
             </form>
         </section>
@@ -43,7 +45,7 @@
         </section>
 
         <section id="how-it-works">
-            <video id="video"></video>
+            <iframe id="video" width="426" height="240" src="https://www.youtube.com/embed/SUpYKxPWuhg" title="Get RICH in Your 20’s: DON’T Start a Business" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </section>
 
         <section id="pricing">
